--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,38 @@
     "start_url": "/index.html",
     "display": "standalone",
     "background_color": "white",
-    "theme_color": "white"
+    "theme_color": "white",
+    "icons": [{
+          "src": "images/icons/icon-72x72",
+          "sizes": "72x72",
+          "type": "image/png"
+        }, {
+            "src": "images/icons/icon-96x96",
+            "sizes": "96x96",
+            "type": "image/png"
+        }, {
+            "src": "images/icons/icon-128x128",
+            "sizes": "128x128",
+            "type": "image/png"
+        }, {
+            "src": "images/icons/icon-144x144",
+            "sizes": "144x144",
+            "type": "image/png"
+        }, {
+            "src": "images/icons/icon-152x152",
+            "sizes": "152x152",
+            "type": "image/png"
+        }, {
+            "src": "images/icons/icon-192x192",
+            "sizes": "192x192",
+            "type": "image/png"
+        }, {
+            "src": "images/icons/icon-384x384",
+            "sizes": "384x384",
+            "type": "image/png"
+        }, {
+            "src": "images/icons/icon-512x512",
+            "sizes": "512x512",
+            "type": "image/png"
+        }]
   }
